redirected to login page if session expired

--- a/public/signout/admin/index.html
+++ b/public/signout/admin/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Log In</title>
+    <title>NCSSM Sign-Out</title>
 
     <link rel="stylesheet" type="text/css" href="../../ext/resources/css/ext-all.css">
     <script type="text/javascript" src="../../ext/ext-debug.js"></script>
