--- a/public/signout/sli/index.html
+++ b/public/signout/sli/index.html
@@ -3,6 +3,7 @@
     <title>NCSSM Sign-Out</title>
 
     <link rel="stylesheet" type="text/css" href="../../ext/resources/css/ext-all.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="../../ext/ext-debug.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="../cookie.js"></script>
