--- a/public/signout/login/index.html
+++ b/public/signout/login/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="../../ext/resources/css/ext-all.css">
     <script type="text/javascript" src="../../ext/ext-debug.js"></script>
     <script type="text/javascript" src="app.js"></script>
-    <script type="text/javascript" src="../cookie.js"></script>
+    <script type="text/javascript" src="../resources/scripts/cookie.js"></script>
 </head>
 <body></body>
 </html>
