--- a/public/signout/admin/index.html
+++ b/public/signout/admin/index.html
@@ -4,7 +4,7 @@
 
     <link rel="stylesheet" type="text/css" href="../../ext/resources/css/ext-all.css">
     <link rel="stylesheet" type="text/css" href="../resources/styles/style.css">
-    <script type="text/javascript" src="../../ext/ext-debug.js"></script>
+    <script type="text/javascript" src="../../ext/ext-all.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="../resources/scripts/cookie.js"></script>
 </head>
