--- a/public/signout/login/index.html
+++ b/public/signout/login/index.html
@@ -3,7 +3,7 @@
     <title>Log In</title>
 
     <link rel="stylesheet" type="text/css" href="../../ext/resources/css/ext-all.css">
-    <script type="text/javascript" src="../../ext/ext-debug.js"></script>
+    <script type="text/javascript" src="../../ext/ext-all.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="../resources/scripts/cookie.js"></script>
 </head>
